# xrl-python

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements-test.txt  requirements.txt  test_xrl_integration.py  xrl.py
.github/workflows/: publish.yml
examples/: proper_usage.py
src/xrl/: __init__.py  base.py  fixed_window.py  token_bucket.py  xrl.py
tests/: test_fixed_window.py  test_fixed_window_integration.py  test_token_bucket.py  test_token_bucket_integration.py  test_xrl.py  test_xrl_integration.py
